# natAWSWrapper

./: .gitignore  .gitmodules  CMakeLists.txt
apps/bootstrapper/src/: main.cpp
apps/natcaller/include/: rh4n_natcall.h
apps/natcaller/src/: main.c  rh4n_nat_errorhandling.c  rh4n_nat_parmgeneration.c  rh4n_natcall_process.c
apps/natuser/include/: nattab.h  rh4n_nat.h  rh4n_nat_varhandling.h  rh4n_nat_varhandling.h~
apps/natuser/src/: ncuxinit.c  rh4n_nat_debug_init.c  rh4n_nat_genjson.c  rh4n_nat_genjson.c~  rh4n_nat_getbodyobj.c  rh4n_nat_getbodyvar.c  rh4n_nat_geturlobj.c  rh4n_nat_geturlvar.c  rh4n_nat_geturlvar.c~  rh4n_nat_getuser.c  rh4n_nat_init.c  rh4n_nat_jumptab.c  rh4n_nat_mbn.c  rh4n_nat_utils.c  rh4n_nat_variablereadout.c  rh4n_nat_variablereadout.c~
apps/natuser/src/put_var_handling/: rh4n_nat_put_a.c  rh4n_nat_put_a.c~  rh4n_nat_put_aton.c  rh4n_nat_put_f.c  rh4n_nat_put_i.c  rh4n_nat_put_l.c
apps/natuser/src/var_parm_handling/: rh4n_nat_a_handling.c  rh4n_nat_a_handling.c~  rh4n_nat_dt_handling.c  rh4n_nat_f_handling.c  rh4n_nat_i_handling.c  rh4n_nat_l_handling.c  rh4n_nat_l_handling.c~  rh4n_nat_np_handling.c  rh4n_nat_u_handling.c
apps/natuser/test/: rh4n_nat_test_genjson  rh4n_nat_test_genjson.c
libs/rh4n_aws_JSONConverter/include/: JSONConverter.h  RH4NArray.h  RH4NObject.h  RH4NObjectArray.h
libs/rh4n_aws_JSONConverter/include/signatures/: ArraySignature.h  ObjectSignature.h  ObjectSignatureNode.h  Types.h
libs/rh4n_aws_JSONConverter/include/utils/: NameStack.h
libs/rh4n_aws_JSONConverter/src/: RH4NArray.cpp  RH4NObject.cpp  RH4NObjectArray.cpp
libs/rh4n_aws_JSONConverter/src/signatures/: ArraySignature.cpp  ObjectSignature.cpp  ObjectSignatureNode.cpp  Types.cpp
libs/rh4n_aws_JSONConverter/src/utils/: NameStack.cpp
libs/rh4n_jsongenerator/include/: rh4n_json.h
libs/rh4n_jsongenerator/src/: .rh4n_json_array.c.swo  .rh4n_json_generator.c.swo  rh4n_json_array.c  rh4n_json_generator.c  rh4n_json_group.c
libs/rh4n_jsongenerator/tests/: main  main.c
libs/rh4n_ldaparser/include/: rh4n_ldaparser.h
libs/rh4n_ldaparser/src/: rh4n_lda_array.c  rh4n_lda_filehandling.c  rh4n_lda_free.c  rh4n_lda_print.c  rh4n_lda_utils.c  rh4n_lda_variables.c  rh4n_ldaparser.c
libs/rh4n_ldaparser/test/: main  main.c
libs/rh4n_ldaparser/testfiles/: PTRLTEST.NGL  RHLLREST.NGL
libs/rh4n_utils/include/: rh4n_utils.h
libs/rh4n_utils/src/: rh4n_utils.c  rh4n_utils_prop.c
libs/rh4n_utils/test/: main.c
libs/rh4n_var2name/include/: rh4n_v2n.h
libs/rh4n_var2name/src/: rh4n_v2n.c  rh4n_v2n_resolvenames.c  rh4n_v2n_resolveposition.c
libs/rh4n_var2name/test/: main  main.c
libs/rh4n_var2name/testfiles/: TEST.NGL  TESTLDA.NGL
scripts/: build  dev_build  rebuildMakefile  startNatDevContainer
tests/: ldaparser.c
